--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Convent.WebApi",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "release": "standard-version"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "@commitlint/cli": "^11.0.0"
   },
   "devDependencies": {
-    "husky": "^4.3.8"
+    "husky": "^4.3.8",
+    "standard-version": "^9.1.1"
   }
 }
